@startuml DashboardUML_MVC_StrictDI
' --- Style / Layout ---
!define DARKBLUE
!include style.plantuml
hide circle
skinparam classAttributeIconSize 0

' -------------------------
' Bootstrapping
' -------------------------
class Main <<Bootstrapping>>{
  +main(): None
}

' =========================
' MODEL
' =========================
package "Model" {

  ' --- Domain ---
  together {
    class Student {
      -student_id: str
      -name: str
      -start_date: date
      -enrollments: Enrollment[*]
      -goals: Goal[*]

      -_months_since_start(now: date): int
      +get_average_grade(): float
      +get_time_progress_percentage(duration_months: int): float
      +get_cp_progress_percentage(total_ects: int): float
      +get_earned_ects(): int
      +get_cp_per_month(): float
      +evaluate_all_goals(program: StudyProgram): GoalEvaluation[*]
    }

    class Enrollment {
      -grade: float
      -date_passed: date
    }

    class Module {
      -module_id: str
      -title: str
      -ects: int
    }

    class StudyProgram {
      -name: str
      -total_ects: int
      -duration_months: int
    }
  }

  Student "1" *-- "0..*" Enrollment
  Module  "1" -- "0..*" Enrollment
  Student "1" -- "1" StudyProgram : studies
  StudyProgram "1" -- "1..*" Module : contains

  enum Status {
    GREEN
    YELLOW
    RED
  }

  class GoalEvaluation {
    -title: str
    -status: Status
    -ui_type: str
    -ui_data: dict
    -criteria: EvaluationCriterion[*]
  }

  class EvaluationCriterion {
    -name: str
    -value: float
    -target: float
  }

  GoalEvaluation "1" *-- "0..*" EvaluationCriterion


  abstract class Goal {
    {abstract} +evaluate(student: Student, program: StudyProgram): GoalEvaluation
    {abstract} +get_title(): str
  }

  Student "1" -- "1..*" Goal : has
  Goal ..> GoalEvaluation
  GoalEvaluation "1" --> "1" Status : has

  class GradeAverageGoal {
    -target_avg: float
    ' +evaluate(student: Student, program: StudyProgram): GoalEvaluation
    ' +get_title(): str
  }
  Goal <|-- GradeAverageGoal

  class DeadlineGoal {
    -duration_months: int
    ' +evaluate(student: Student, program: StudyProgram): GoalEvaluation
    ' +get_title(): str
  }
  Goal <|-- DeadlineGoal

  class CpPaceGoal {
    -target_cp_per_month: float
    ' +evaluate(student: Student, program: StudyProgram): GoalEvaluation
    ' +get_title(): str
  }
  Goal <|-- CpPaceGoal

  ' --- Business Logic / Interfaces ---
  interface IDashboardService {
    +update_student_data(student: Student): None
    +get_student_aggregate(student_id: str): Student
    +add_module_to_catalogue(module: Module): None
    +update_study_progress(student_id: str, module_id: str, grade: float, date_passed: date): None
    +evaluate_student_goals(student: Student): GoalEvaluation[*]
    +list_students(): Student[*]
    +list_modules(): Module[*]
    +update_student_goals(student_id: str, duration_months: int, target_avg: float, target_cp_per_month: float): None
    +close(): None
  }

  class DashboardService {
    -student_repository: StudentRepository
    -module_repository: ModuleRepository
    -enrollment_repository: EnrollmentRepository
    -_program: StudyProgram

    +create_default_program(): StudyProgram
    +update_student_data(student: Student): None
    +get_student_aggregate(student_id: str): Student
    +add_module_to_catalogue(module: Module): None
    +update_study_progress(student_id: str, module_id: str, grade: float, date_passed: date): None
    +evaluate_student_goals(student: Student): GoalEvaluation[*]
    +list_students(): Student[*]
    +list_modules(): Module[*]
    +update_student_goals(student_id: str, duration_months: int, target_avg: float, target_cp_per_month: float): None
    +close(): None
  }

  IDashboardService <|.. DashboardService

  together {
    ' --- Persistence ---
    class Database {
      -db_path: str
      -conn: sqlite3.Connection
      +connect(): None
      +init_db(): None
      +close(): None
    }

    class StudentRepository {
      -database: Database
      +upsert(student: Student): None
      +get_aggregate_by_id(student_id: str): Student
      +save_goals(student_id: str, goals: Goal[*]): None
      +list_all(): Student[*]
      +close(): None
    }
    class ModuleRepository {
      -database: Database
      +upsert(module: Module): None
      +get_by_id(module_id: str): Module
      +list_all(): Module[*]
      +close(): None
    }

    class EnrollmentRepository {
      -database: Database
      +upsert(student_id: str, module_id: str, grade: float, date_passed: date): None
      +list_by_student(student_id: str): Enrollment[*]
      +close(): None
    }
  }

  StudentRepository --> Database
  ModuleRepository --> Database
  EnrollmentRepository --> Database

  StudentRepository ..> Student
  StudentRepository ..> StudyProgram
  StudentRepository ..> Goal
  ModuleRepository ..> Module
  EnrollmentRepository ..> Enrollment

  DashboardService ..> Student
  DashboardService ..> Module
  DashboardService ..> Goal
  DashboardService ..> GoalEvaluation
  DashboardService --> StudentRepository
  DashboardService --> ModuleRepository
  DashboardService --> EnrollmentRepository

}

' =========================
' CONTROLLER
' =========================
package "Controller" {
  class DashboardController {
    -dashboard_service: IDashboardService

    +process_student_data(student: Student): None
    +process_module_data(module: Module): None
    +process_enrollment_data(student: Student, module: Module, grade: float, date: date): None
    +process_goal_data(student_id: str, target_duration: int, target_avg: float, target_cp: float): None
    +refresh_dashboard_stats(student: Student): GoalEvaluation[*]
    +shutdown(): None
    +refresh_student_list(): Student[*]
    +get_student_aggregate(student_id: str): Student
    +refresh_module_list(): Module[*]
  }
  DashboardController --> IDashboardService
  DashboardController ..> GoalEvaluation
  DashboardController ..> Student
  DashboardController ..> Module
}

' =========================
' VIEW
' =========================
package "View" {
  class DashboardGUI {
    -master: tk.Tk
    -notebook: ttk.Notebook
    -tab_overview: ttk.Frame
    -tab_entry: ttk.Frame
    -controller: DashboardController
    -target_monitoring: TargetMonitoring
    -data_collection: DataCollection

    +create_widgets(): None
    +sync_student_dropdown(): None
    -_refresh_overview_from_form(): None
    +on_window_close(): None
  }

  class TargetMonitoring {
    -master: tk.Misc
    -controller: DashboardController
    -_student_rows: dict
    -container: ttk.Frame
    -student_dropdown: ttk.Combobox

    +render(): None
    +refresh_student_dropdown(): None
    +on_student_selected(_evt): None
    +update_overview(data: GoalEvaluation[*]): None
    -_clear_tiles(): None
    -_show_placeholder(): None
  }

  class DataCollection {
    -master: tk.Misc
    -controller: DashboardController
    -_on_student_saved: callable
    -_student_rows: dict
    -_modules_by_id: dict
    -_goal_settings: dict

    +render(): None
    -_clear_enrollments_view(): None
    -_render_enrollments(student: Student): None
    +refresh_student_list(): None
    +on_student_selected(_evt): None
    -_display_goals_from_student(student: Student): None
    -_clear_goal_fields(): None
    +submit_data(): None
    -_parse_grade(text: str): float
    -_parse_date(text: str): date
    -_save_enrollment(): None
    +refresh_module_dropdown(): None
    -_current_student(): Student
    -_save_module(): None
    -_save_goal_settings(): None
  }

  DashboardGUI o-- TargetMonitoring
  DashboardGUI o-- DataCollection

  DashboardGUI ..> DataCollection : injects Controller
  DashboardGUI ..> TargetMonitoring : injects Controller

  TargetMonitoring ..> DashboardController
  DataCollection ..> DashboardController
  TargetMonitoring ..> GoalEvaluation
  
  DashboardGUI ..> TargetMonitoring : sync_student_dropdown()
}

' ==========================
' Wiring / Dependency Injection (Main)
' ==========================
Main ..> Database : creates
Main ..> ModuleRepository : creates (injects Database)
Main .right.> EnrollmentRepository : creates (injects Database)
Main .left.> StudentRepository : creates (injects Database)
Main ..> DashboardService : creates (injects Repositories)
Main ..> IDashboardService : bounds (DashboardService as IDashboardService)
Main ..> DashboardController : creates (injects IDashboardService)
Main ..> DashboardGUI : creates (injects Controller)


' ==========================
' Shutdown / Close DB
' ==========================
DashboardGUI ..> DashboardController : shutdown()

@enduml